# formation-rust

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  web.rs
static/: index.html
