[package]
name = "mogulid"
version = "0.1.0"
authors = ["Stéphane Mourey"]
license = "MIT OR Apache-2.0"
description = "Agnosticly helps to manage concurrent versions of things"
homepage = "https://mogulid-project.stephanemourey.fr"
repository = "https://mogulid-sources.stephanemourey.fr/mogul"
keywords = ["versions", "concurrent", "conflict", "manage"]
categories = ["concurrency", "data-structures", "date-and-time"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ulid = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
