[package]
name = "txt"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.128"
clap = { version = "4.0", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
derive = "1.0.0"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "web"
path = "src/web.rs"
